--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!-- HELLO
 -
 DevFolio is a minimal, clean, lightweight and fully responsive template for Devlopers!
-Created by Anil Seervi.
+Created by Vicky Pandey.
 -
-GitHub repo: https://github.com/AnilSeervi/DevFolio
-README: https://github.com/AnilSeervi/DevFolio/blob/master/README.md
 -
 Have fun creating your portfolio on this template!!! -->
 
@@ -24,7 +22,7 @@ Have fun creating your portfolio on this template!!! -->
     <meta name="keywords" content="[username], [name], skill" />
 
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Vicky Pandey | Developer" />
 
     <!-- Add a your png Logo to the assets folder and change the href attr accordingly  -->
     <link rel="icon" type="image/png" href="./assets/devfolio-logo.png" />
@@ -105,7 +103,7 @@ Have fun creating your portfolio on this template!!! -->
     <div id="hero">
       <section class="container">
         <h1 class="hero-title">
-          Hi, my name is <span class="text-color-main name">Your Name</span>
+          Hi, my name is <span class="text-color-main name">Vicky Pandey</span>
           <br />
           I'm the Unknown Developer.
         </h1>
