--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ Have fun creating your portfolio on this template!!! -->
     <!-- Fill content with the URL of this portfolio you'll host -->
     <meta property="og:url" content="https://devfolio.js.org/" />
     <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
-    <meta property="og:title" content="[Your name here] | Developer" />
+    <meta property="og:title" content="Vicky Pandey | Developer" />
     <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
-    <meta property="og:description" content="Made using DevFolio Template" />
+    <meta property="og:description" content="Made by Vicky Pandey" />
     <!-- Add a thumbnail image in assets folder and fill the content attr with URL to that thumbnail 
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
     <meta
@@ -105,7 +105,7 @@ Have fun creating your portfolio on this template!!! -->
         <h1 class="hero-title">
           Hi, my name is <span class="text-color-main name">Vicky Pandey</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Developer.
         </h1>
         <p class="hero-cta">
           <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
@@ -133,16 +133,10 @@ Have fun creating your portfolio on this template!!! -->
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Temporibus quae repellat, ad omnis distinctio velit saepe expedita
-              architecto cumque veritatis adipisci. Sapiente non, saepe hic
-              adipisci doloribus quisquam recusandae et.
+             Hello! I’m Vicky Pandey, a passionate and versatile software developer with 19 years of experience in crafting innovative and efficient solutions. My journey in tech began with a deep fascination for how things work, which evolved into a career dedicated to building robust software and engaging user experiences.
             </p>
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-              obcaecati doloribus qui praesentium quae veniam esse mollitia
-              consequuntur nisi minima quasi et fugit quidem enim recusandae
-              delectus, iusto culpa rerum?
+              Hello! I’m [Your Name], a passionate and versatile software developer with [X] years of experience in crafting innovative and efficient solutions. My journey in tech began with a deep fascination for how things work, which evolved into a career dedicated to building robust software and engaging user experiences.
             </p>
             <span class="about-wrapper__cta">
               <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
@@ -162,12 +156,13 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">My Project</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                I’ve had the opportunity to work on several impactful projects, including:
+
+Medical Website: A simple medical website which help everyone
+Advance Medical website: Advance medical website, it is easy to use for everyone with advance ai.
+Each project has been a unique learning experience, allowing me to refine my skills and contribute to meaningful outcomes.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
@@ -202,12 +197,13 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">My Project</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                               I’ve had the opportunity to work on several impactful projects, including:
+
+Medical Website: A simple medical website which help everyone
+Advance Medical website: Advance medical website, it is easy to use for everyone with advance ai.
+Each project has been a unique learning experience, allowing me to refine my skills and contribute to meaningful outcomes.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
@@ -242,12 +238,13 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">Medical Website Project</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                               I’ve had the opportunity to work on several impactful projects, including:
+
+Medical Website: A simple medical website which help everyone
+Advance Medical website: Advance medical website, it is easy to use for everyone with advance ai.
+Each project has been a unique learning experience, allowing me to refine my skills and contribute to meaningful outcomes.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
