--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@ Each project has been a unique learning experience, allowing me to refine my ski
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a href="#" class="cta-btn cta-btn--resume">Call to Action</a>
+          <p class="contact-wrapper__text">Dm me on instagram</p>
+          <a href="https://www.instagram.com/_urfav.vicky/" class="cta-btn cta-btn--resume">Instagram</a>
         </div>
       </div>
     </section>
@@ -316,7 +316,7 @@ Each project has been a unique learning experience, allowing me to refine my ski
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a
-            href="#!"
+            href="https://www.instagram.com/_urfav.vicky/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="codepen"
@@ -342,12 +342,12 @@ Each project has been a unique learning experience, allowing me to refine my ski
         </div>
         <hr />
         <p class="footer__text">
-          &copy; <span id="year"></span> - Template by
+          &copy; <span id="year"></span> - Made By
           <a
             href="https://github.com/AnilSeervi"
             target="_blank"
             rel="noopener noreferrer"
-            >Anil Seervi</a
+            >Vicky Pandey</a
           >. <br />Made with &hearts;
         </p>
       </div>
