--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ Each project has been a unique learning experience, allowing me to refine my ski
         <p class="footer__text">
           &copy; <span id="year"></span> - Made By
           <a
-            href="https://github.com/AnilSeervi"
+            href="https://github.com/vickyhubhai/My-Portfolio-/"
             target="_blank"
             rel="noopener noreferrer"
             >Vicky Pandey</a
